--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,4 +1,4 @@
 /apis/poi @gugalnikov
-/apis/trips @gugalnikov
-/apis/user-java @gugalnikov
-/apis/userprofile @gugalnikov
+/apis/trips @manfredbjorlin
+/apis/user-java @pals-live
+/apis/userprofile @kapoor1988
