trying to fix install dependencies step

--- a/.github/workflows/template.yaml
+++ b/.github/workflows/template.yaml
@@ -11,7 +11,8 @@ jobs:
         with:
           dotnet-version: '2.1.x'
       - name: Install dependencies
-        run: dotnet restore /apis/poi
+        run: dotnet restore
+        working-directory: /apis/poi
       - name: Build
         run: dotnet build --no-restore
       - name: Test with the dotnet CLI
