--- a/.github/workflows/template.yaml
+++ b/.github/workflows/template.yaml
@@ -12,7 +12,7 @@ jobs:
           dotnet-version: '2.1.x'
       - name: Install dependencies
         run: dotnet restore
-        working-directory: /apis/poi
+        working-directory: apis/poi
       - name: Build
         run: dotnet build --no-restore
       - name: Test with the dotnet CLI
