--- a/.github/workflows/template.yaml
+++ b/.github/workflows/template.yaml
@@ -7,7 +7,7 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v2
       - name: Setup dotnet
-        uses: actions/setup-dotnet@v1
+        uses: actions/setup-dotnet@v1.7.2
         with:
           dotnet-version: '2.1.x'
       - name: Install dependencies
@@ -17,5 +17,5 @@ jobs:
         run: dotnet build --no-restore
         working-directory: apis/poi
       - name: Test with the dotnet CLI
-        run: dotnet test
+        run: dotnet test --no-build
         working-directory: apis/poi
