fixed issue on template file

--- a/.github/workflows/template.yaml
+++ b/.github/workflows/template.yaml
@@ -19,3 +19,6 @@ jobs:
       - name: Test with the dotnet CLI
         run: dotnet test --no-build
         working-directory: apis/poi
+        if: failure() # OR Check a bool variable you create and toggle as needed 
+        uses: JasonEtco/create-an-issue@master 
+ env: GITHUB\_TOKEN:${{ secrets.GITHUB\_TOKEN }}  
