--- a/.github/workflows/template.yaml
+++ b/.github/workflows/template.yaml
@@ -19,7 +19,7 @@ jobs:
       - name: Test with the dotnet CLI
         run: dotnet test --no-build
         working-directory: apis/poi
-        - uses: actions/checkout@master
+        uses: actions/checkout@master
       - name: code coverage
         uses: codecov/codecov-action@v2
         with:
