Updated version on JasonEtco issue creation

--- a/.github/workflows/template.yaml
+++ b/.github/workflows/template.yaml
@@ -20,5 +20,5 @@ jobs:
         run: dotnet test --no-build
         working-directory: apis/poi
       - if: ${{ failure() }}
-        uses: JasonEtco/create-an-issue@master 
+        uses: JasonEtco/create-an-issue@v2 
         env: ${{ github.token }}  
