--- a/.github/workflows/template.yaml
+++ b/.github/workflows/template.yaml
@@ -26,5 +26,5 @@ jobs:
           name: codecov-umbrella
           fail_ci_if_error: true
           verbose: true
-          files: ./coverage.info
-          working-directory: apis/poi
+          files: /coverage.info
+          working-directory: apis/poi/lcov
