--- a/.github/workflows/template.yaml
+++ b/.github/workflows/template.yaml
@@ -19,3 +19,7 @@ jobs:
       - name: Test with the dotnet CLI
         run: dotnet test --no-build
         working-directory: apis/poi
+      - if: ${{ failure() }}
+        uses: actions/github-script@v4
+        with:
+          script: console.log('Hello!')
