Added script block for issue creation

--- a/.github/workflows/template.yaml
+++ b/.github/workflows/template.yaml
@@ -22,4 +22,11 @@ jobs:
       - if: ${{ failure() }}
         uses: actions/github-script@v4
         with:
-          script: console.log('Hello!')
+          script: |
+            let body = "${{ env.build_name }} Worflow Failure \n Build Number: ${{ github.run_number }} \n Build Log: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }} \n SHA: [${{ github.sha }}](https://github.com/${{ github.repository }}/commit/${{ github.sha }}) \n";
+            github.issues.create({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              title: 'Error in build',
+              body: body
+            })
