--- a/.github/workflows/template.yaml
+++ b/.github/workflows/template.yaml
@@ -20,11 +20,8 @@ jobs:
         run: dotnet test --no-restore --verbosity normal /p:CollectCoverage=true /p:CoverletOutput=lcov/ /p:CoverletOutputFormat=lcov
         working-directory: apis/poi
       - name: code coverage
-        uses: codecov/codecov-action@v2
+        uses: coverallsapp/github-action@master
         with:
-          flags: unittests
-          name: codecov-umbrella
-          fail_ci_if_error: true
-          verbose: true
-          working-directory: apis/poi/tests/UnitTests/lcov/
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          path-to-lcov: apis/poi/tests/UnitTests/lcov/coverage.info
 
