--- a/.github/workflows/template.yaml
+++ b/.github/workflows/template.yaml
@@ -10,6 +10,9 @@ jobs:
         uses: actions/setup-dotnet@v1.7.2
         with:
           dotnet-version: '2.1.x'
+      - name: Add Code Coverage Tools
+        working-directory: apis/poi/tests/UnitTests
+        run: dotnet add package coverlet.msbuild
       - name: Install dependencies
         run: dotnet restore
         working-directory: apis/poi
@@ -17,8 +20,13 @@ jobs:
         run: dotnet build --no-restore
         working-directory: apis/poi
       - name: Test with the dotnet CLI
-        run: dotnet test --no-build
+        run: dotnet test --no-restore --verbosity normal /p:CollectCoverage=true /p:CoverletOutput=lcov/ /p:CoverletOutputFormat=lcov
         working-directory: apis/poi
+      - name: code coverage
+        uses: coverallsapp/github-action@master
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          path-to-lcov: apis/poi/tests/UnitTests/lcov/coverage.info
       - if: ${{ failure() }}
         uses: actions/github-script@v4
         with:
