--- a/.github/workflows/poi.yaml
+++ b/.github/workflows/poi.yaml
@@ -1,4 +1,4 @@
-name: GitHub Actions Demo
+name: Build and publish POI API
 on: 
   push: 
     branches:
@@ -48,3 +48,12 @@ jobs:
               title: 'Error in build',
               body: body
             })
+      - name: Push to Azure
+        uses: azure/docker-login@v1
+        with:
+          login-server: '<login server>' # default: index.docker.io
+          username: '<username>'
+          password: '<password>'
+      - run: |
+          
+        
