--- a/.github/workflows/poi.yaml
+++ b/.github/workflows/poi.yaml
@@ -14,6 +14,8 @@ on:
 jobs:
   Build_POI_API:
     runs-on: ubuntu-latest
+    env: 
+      ACR_URL: 'openhackfho408g7acr.azurecr.io'
     steps:
       - name: Check out repository code
         uses: actions/checkout@v2
@@ -49,12 +51,13 @@ jobs:
               title: 'Error in build',
               body: body
             })
-      - name: Push to Azure
+      - name: Login to Azure
         uses: azure/docker-login@v1
         with:
-          login-server: 'openhackfho408g7acr.azurecr.io'
+          login-server: ${{ env.ACR_URL }}
           username: ${{ secrets.ACR_USERNAME }}
           password: ${{ secrets.ACR_PASSWORD }}
-      - run: |
-          docker build . -t openhackfho408g7acr.azurecr.io/devopsoh/api-poi:${{github.run_number}}
-          docker push openhackfho408g7acr.azurecr.io/devopsoh/api-poi:${{github.run_number}}
+      - name: Build and push to Docker
+        run: |
+          docker build . -t ${{ env.ACR_URL }}/devopsoh/api-poi:${{github.run_number}}
+          docker push ${{ env.ACR_URL }}/devopsoh/api-poi:${{github.run_number}}
