--- a/.github/workflows/trips.yaml
+++ b/.github/workflows/trips.yaml
@@ -1,21 +1,20 @@
-name: GitHub Actions Demo
+name: Trips Pipeline
 on:
   push:
     branches:
       - feature_*
     paths:
       - apis/trips/**
-      - .github/**
   pull_request:
     branches:
       - develop
     paths:
       - apis/trips/**
 jobs:
-  Build_POI_API:
+  Build_Trips_API:
     runs-on: ubuntu-latest
     env: 
-      ACR_URL: 'openhackfho408g7acr.azurecr.io'
+      ACR_URL: openhackfho408g7acr.azurecr.io
     steps:
       - name: Check out repository code
         uses: actions/checkout@v2
@@ -24,7 +23,7 @@ jobs:
         with:
           dotnet-version: '2.1.x'
       - name: Add Code Coverage Tools
-        working-directory: apis/poi/tests/UnitTests
+        working-directory: apis/trips/tests/UnitTests
         run: dotnet add package coverlet.msbuild
       - name: Install dependencies
         run: dotnet restore
@@ -59,5 +58,6 @@ jobs:
           password: ${{ secrets.ACR_PASSWORD }}
       - name: Build and push to docker
         run: |
-          docker build . -t ${{ env.ACR_URL }}/devopsoh/api-trips:${{github.run_number}}
+          docker build . -t ${{ env.ACR_URL }}/devopsoh/api-trips:${{github.run_number}} --file Dockerfile
           docker push ${{ env.ACR_URL }}/devopsoh/api-trips:${{github.run_number}}
+        working-directory: apis/trips
