--- a/.github/workflows/poi.yaml
+++ b/.github/workflows/poi.yaml
@@ -30,7 +30,7 @@ jobs:
         run: dotnet restore
         working-directory: apis/poi
       - name: Build
-        run: dotnet build --no-restore
+        run: dotnet build --configuration Release --no-restore apis/poi/web/*.csproj
         working-directory: apis/poi
       - name: Test with the dotnet CLI
         run: dotnet test --no-restore --verbosity normal /p:CollectCoverage=true /p:CoverletOutput=lcov/ /p:CoverletOutputFormat=lcov
