--- a/.github/workflows/poi.yaml
+++ b/.github/workflows/poi.yaml
@@ -30,7 +30,7 @@ jobs:
         run: dotnet restore
         working-directory: apis/poi
       - name: Build
-        run: dotnet build --configuration Release --no-restore apis/poi/web/*.csproj
+        run: dotnet build --configuration Release --no-restore
         working-directory: apis/poi
       - name: Test with the dotnet CLI
         run: dotnet test --no-restore --verbosity normal /p:CollectCoverage=true /p:CoverletOutput=lcov/ /p:CoverletOutputFormat=lcov
@@ -59,6 +59,6 @@ jobs:
           password: ${{ secrets.ACR_PASSWORD }}
       - name: Build and push to Docker
         run: |
-          docker build . -t ${{ env.ACR_URL }}/devopsoh/api-poi:${{github.run_number}} --file ./web/Dockerfile
+          docker build . -t ${{ env.ACR_URL }}/devopsoh/api-poi:${{github.run_number}} --file Dockerfile
           docker push ${{ env.ACR_URL }}/devopsoh/api-poi:${{github.run_number}}
-        working-directory: apis/poi
+        working-directory: apis/poi/web
