--- a/.github/workflows/user-java.yaml
+++ b/.github/workflows/user-java.yaml
@@ -20,6 +20,7 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: '11'
+          distribution: 'adopt'
       - name: Test with the Java CLI
         run: mvn test
         working-directory: apis/user-java
