--- a/.github/workflows/user-java.yaml
+++ b/.github/workflows/user-java.yaml
@@ -2,7 +2,7 @@ name: GitHub Actions Demo
 on:
   push:
     branches:
-      - feature_*
+      - feature*
     paths:
       - apis/user-java/**
       - .github/**
