--- a/.github/workflows/trips.yaml
+++ b/.github/workflows/trips.yaml
@@ -35,12 +35,14 @@ jobs:
               title: 'Error in build',
               body: body
             })
-      - name: Push to Azure
+      - name: Login to Azure
         uses: azure/docker-login@v1
         with:
-          login-server: 'openhackfho408g7acr.azurecr.io'
+          login-server: ${{ env.ACR_URL }}
           username: ${{ secrets.ACR_USERNAME }}
           password: ${{ secrets.ACR_PASSWORD }}
-      - run: |
-          docker build . -t openhackfho408g7acr.azurecr.io/devopsoh/api-trips:${{github.run_number}}
-          docker push openhackfho408g7acr.azurecr.io/devopsoh/api-trips:${{github.run_number}}
+      - name: Build and push to Docker
+        run: |
+          docker build . -t ${{ env.ACR_URL }}/devopsoh/api-trips:${{github.run_number}} --file Dockerfile
+          docker push ${{ env.ACR_URL }}/devopsoh/api-trips:${{github.run_number}}
+        working-directory: apis/trips
