--- a/.github/workflows/userprofile.yaml
+++ b/.github/workflows/userprofile.yaml
@@ -5,6 +5,7 @@ on:
       - feature*
     paths:
       - apis/userprofile/**
+      - .github/workflows/userprofile.yaml
   pull_request:
     branches:
       - develop
