--- a/.github/workflows/trips.yaml
+++ b/.github/workflows/trips.yaml
@@ -15,38 +15,19 @@ jobs:
   Build_TRIPS_API:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out repository code
-        uses: actions/checkout@v2
-      - name: Setup Go
-        uses: actions/setup-go@v2
+      - name: Set up Go 1.12
+        uses: actions/setup-go@v1
         with:
-          go-version: '1.14'
-      - name: Run Go from CLI
-        run: go run main.go
-        working-directory: apis/trips
-      - name: Generate coverage report
-        run: go test `go list ./... | grep -v examples` -coverprofile=coverage.txt -covermode=atomic
-      - uses: coverallsapp/github-action@master
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          path-to-lcov: apis/trips/tests/UnitTests/lcov/coverage.info
-      - if: ${{ failure() }}
-        uses: actions/github-script@v4
-        with:
-          script: |
-            let body = "${{ env.build_name }} Worflow Failure \n Build Number: ${{ github.run_number }} \n Build Log: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }} \n SHA: [${{ github.sha }}](https://github.com/${{ github.repository }}/commit/${{ github.sha }}) \n";
-            github.issues.create({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              title: 'Error in build',
-              body: body
-            })
-      - name: Push to Azure
-        uses: azure/docker-login@v1
-        with:
-          login-server: 'openhackfho408g7acr.azurecr.io'
-          username: ${{ secrets.ACR_USERNAME }}
-          password: ${{ secrets.ACR_PASSWORD }}
-      - run: |
-          docker build . -t openhackfho408g7acr.azurecr.io/devopsoh/api-trips:${{github.run_number}}
-          docker push openhackfho408g7acr.azurecr.io/devopsoh/api-trips:${{github.run_number}}
+          go-version: 1.12
+        id: go
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v1
+      - name: Get dependencies
+        run: |
+          go get -v -t -d ./...
+          if [ -f Gopkg.toml ]; then
+              curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
+              dep ensure
+          fi
+      - name: Build
+        run: go build -v .
