--- a/.github/workflows/trips.yaml
+++ b/.github/workflows/trips.yaml
@@ -29,5 +29,7 @@ jobs:
               curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
               dep ensure
           fi
+        working-directory: apis/trips
       - name: Build
         run: go build -v .
+        working-directory: apis/trips
