trying to build and push trips docker image

--- a/.github/workflows/trips.yaml
+++ b/.github/workflows/trips.yaml
@@ -33,4 +33,15 @@ jobs:
       - name: Build
         run: go build -v .
         working-directory: apis/trips
+      - name: Login to Azure
+        uses: azure/docker-login@v1
+        with:
+          login-server: ${{ env.ACR_URL }}
+          username: ${{ secrets.ACR_USERNAME }}
+          password: ${{ secrets.ACR_PASSWORD }}
+      - name: Build and push to Docker
+        run: |
+          docker build . -t ${{ env.ACR_URL }}/devopsoh/api-trips:${{github.run_number}} --file Dockerfile
+          docker push ${{ env.ACR_URL }}/devopsoh/api-trips:${{github.run_number}}
+        working-directory: apis/trips
 
