--- a/.github/workflows/trips.yaml
+++ b/.github/workflows/trips.yaml
@@ -14,6 +14,8 @@ on:
 jobs:
   Build_TRIPS_API:
     runs-on: ubuntu-latest
+    env:
+      ACR_URL: openhackfho408g7acr.azurecr.io
     steps:
       - name: Set up Go 1.12
         uses: actions/setup-go@v1
