--- a/.github/workflows/poi.yaml
+++ b/.github/workflows/poi.yaml
@@ -5,6 +5,7 @@ on:
       - feature_*
     paths:
       - apis/poi/**
+      - .github/workflows/poi.yaml
   pull_request:
     branches:
       - develop
