--- a/.github/workflows/poi.yaml
+++ b/.github/workflows/poi.yaml
@@ -1,4 +1,6 @@
 name: POI Pipeline
+env: 
+  ACR_URL: openhackfho408g7acr.azurecr.io
 on:
   push:
     branches:
@@ -14,8 +16,6 @@ on:
 jobs:
   Build_POI_API:
     runs-on: ubuntu-latest
-    env: 
-      ACR_URL: openhackfho408g7acr.azurecr.io
     steps:
       - name: Check out repository code
         uses: actions/checkout@v2
@@ -62,10 +62,14 @@ jobs:
           docker build . -t ${{ env.ACR_URL }}/devopsoh/api-poi:${{github.run_number}} --file Dockerfile
           docker push ${{ env.ACR_URL }}/devopsoh/api-poi:${{github.run_number}}
         working-directory: apis/poi/web
-      
+  DEPLOY_TO_STAGING:
+    runs-on: ubuntu-latest
+    steps:
       - name: 'Run Azure webapp deploy action using publish profile credentials'
         uses: azure/webapps-deploy@v2
         with: 
-          app-name: 'openhackfho408g7poi/staging' 
+          app-name: 'openhackfho408g7poi'
+          slot-name: 'staging' 
           publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE_POI  }}
-          package: './poi'
+          images: ${{ env.ACR_URL }}/devopsoh/api-poi:${{github.run_number}}
+          
